@@ -114,6 +114,8 @@ Version 1.9.0-svn:
    * Increase a little tooltip's opacity
    * Render grid above foreground terrain
    * Clicking on some elements of sidebar now open the related help page
+   * Display weapon stats in recruit/recall dialog the same way as in sidebar
+   * Accuracy/parry have its own line and tooltip in sidebar.
  * WML Engine:
    * Deprecated [set_variable]'s random key, use rand instead
    * Renamed [unit][status] healable to unhealable so it can default to 'no'
